added getLatestBodyTempMeasurement to API
